cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(./src)
if (DEBUG)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -DDEBUG")
endif()	
if (OSXBUNDLE)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -bundle")
	add_executable(shutup MACOSX_BUNDLE ./src/lib.cpp ./src/patricia.cpp) 
else()
	add_library(shutup ./src/lib.cpp ./src/patricia.cpp)
endif()
