cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(./src)
if (DEBUG)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -DDEBUG")
endif()	
file(GLOB_RECURSE src "./src/*.cpp")
if (OSXBUNDLE)
	set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -bundle")
	add_executable(shutup MACOSX_BUNDLE ${src}) 
else()
	add_library(shutup  ${src})
endif()
